--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -6,6 +6,8 @@
   font-size: 14px;
   line-height: 1.6;
   width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
   position: relative;
   border-radius: 30px 30px 0px 0px;
 }
